Fix spacing issue at larger screens. Increase time interval to 5s. Styled the carousel buttons bigger and added hover effect.

--- a/style.css
+++ b/style.css
@@ -99,9 +99,9 @@ body {
 
 .navigation-buttons {
     position: absolute;
-    height: 4rem;
-    width: 30%;
-    max-width: 7rem;
+    height: 5rem;
+    width: 35%;
+    max-width: 9rem;
     bottom: 0;
     left: 50%;
     display: flex;
@@ -119,7 +119,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+
+    transition: transform .1s ease;
 }
+
+.navigation-button:hover {
+    transform: scaleY(1.6);
+}
+
 
 .navigation-button:last-child {
     margin-left: -1px;
@@ -300,8 +308,8 @@ body {
 @media(min-width: 1300px) {
 
     .card-info {
-        margin-left: 4rem;
-        padding-left: 6rem;
+        margin-left: 0rem;
+        padding-left: 0rem;
         margin-right: -18rem;
         max-width: 60rem;
         text-align: left;
@@ -313,7 +321,9 @@ body {
     }
 
     .card-info::before {
-        background-position: 15.5rem 0rem;
+        background-position: 9rem -3rem;
+        background-size: 20%;
+
     }
 
 }
